focus/internals/src/lib/operation/snapshots/focus_internals__operation__sync__test__clone_contains_top_level.snap
---
source: focus/internals/src/lib/operation/sync.rs
expression: "&profile"
---
/*
!/*/
/3rdparty/*
/focus/*
/tools/*
/pants-internal/*
/pants-support/*
*.bzl
BUILD*
WORKSPACE*

