focus/internals/src/lib/operation/snapshots/focus_internals__operation__sync__test__sync_layer_manipulation-4.snap
---
source: focus/internals/src/lib/operation/sync.rs
assertion_line: 213
expression: "std::fs::read_to_string(&profile_path)?"
---
/*
!/*/
/3rdparty/
/focus/
/pants-internal/
/pants-support/
/tools/
/library_b/
/mandatory_z/
/project_b/src/main/java/com/example/cmdline/

