focus/internals/src/lib/operation/snapshots/focus_internals__operation__sync__test__sync_layer_manipulation-5.snap
---
source: focus/internals/src/lib/operation/sync.rs
expression: "std::fs::read_to_string(&profile_path)?"
---
/*
!/*/
/mandatory_z/
/3rdparty/
/focus/
/pants-internal/
/pants-support/
/tools/

