focus/internals/src/lib/operation/snapshots/focus_internals__operation__sync__test__sync_layer_manipulation.snap
---
source: focus/internals/src/lib/operation/sync.rs
assertion_line: 173
expression: "std::fs::read_to_string(&profile_path)?"
---
/*
!/*/
/3rdparty/
/focus/
/pants-internal/
/pants-support/
/tools/
/mandatory_z/

